<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/black"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title" 
        android:textColor="@drawable/white"/>

    <TextView
        android:id="@+id/main_text_verson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/text_verson" 
        android:textColor="@drawable/white"/>

    <Button
        android:id="@+id/main_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_text_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/button_start"
        android:textColor="@drawable/white" />

    <Button
        android:id="@+id/main_button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_button_obj_site"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/button_about"
        android:textColor="@drawable/white" />

    <Button
        android:id="@+id/main_button_obj_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_button_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/button_obj_site"
        android:textColor="@drawable/white" />

    <Button
        android:id="@+id/main_button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_button_start"
        android:layout_below="@+id/main_button_about"
        android:layout_marginTop="32dp"
        android:text="@string/button_exit"
        android:textColor="@drawable/white" />

</RelativeLayout>