<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/choose_obj_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_choose_the_furniture_object"
        android:textColor="@drawable/white" />
    
    <Button
        android:id="@+id/choose_obj_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_back"
        android:textColor="@drawable/white" />

    <Button
        android:id="@+id/choose_obj_button_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_select"
        android:textColor="@drawable/white" />

	<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_above="@+id/choose_obj_button_back"
    android:layout_below="@+id/choose_obj_text_title" >
	
        <TextView
            android:id="@+id/choose_obj_objlist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
    </ScrollView>

</RelativeLayout>